prevent zooming in and fix horizontal scrolling

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,9 +2,10 @@
 @import "bootstrap";
 @import "bootstrap/theme";
 
-body {
+html, body {
   padding-top: 55px;
-  position: relative;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 footer	{
